# rag_pipeline_recommendation_framework

./: .gitignore  Makefile  README.md  comprehensive_demo.py  config.yaml  debug_imports.py  enhanced-system-summary.md  pyproject.toml  requirements-dev.txt  requirements.txt  sample.txt  setup.cfg  syntax_check.py  test_server.py
docs/Presentation/: app.js  corrected-diagrams.md  diagram-descriptions.md  index.html  rag-simple-architecture.md  style.css
pipeline_configs/: enterprise_rag_pipeline_config.yaml  lightweight_rag_pipeline_config.yaml  standard_rag_pipeline_config.yaml
rag_recommender/: __init__.py
rag_recommender/api/: __init__.py  main.py
rag_recommender/api/routes/: __init__.py  components.py  config.py  files.py  health.py  recommendations.py  schemas.py  web.py
rag_recommender/core/: __init__.py
rag_recommender/core/benchmarks/: model_benchmarks.py
rag_recommender/core/composer/: __init__.py  pipeline.py  yaml_generator.py
rag_recommender/core/engine/: __init__.py  recommendation.py
rag_recommender/core/knowledge/: __init__.py  base.py
rag_recommender/core/models/: __init__.py  base.py
rag_recommender/templates/: enhanced_interface.html  index.html  index_old.html  results_style.css
tests/: test_requests.json  test_requests.py
